--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'DD'
 - !lcsh 'Germany -- History'
+- GITenberg
 title: Germany from the Earliest Period, Volume 4
 url: http://www.gutenberg.org/ebooks/8401
